test-2/objects/Ticket__c.object
<CustomObject>
    <fields>
        <fullName>Number1__c</fullName>
        <label>Number1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raiffeisen__c</fullName>
        <label>Raiffeisen</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>number2__c</fullName>
        <label>number2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Ticket</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Ticket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>